src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/not_strings_sraa.php
<?php

return [
    'expectedError' => 'value must be a string (the name_id of the SRAA)',
    'expectedPropertyPath' => 'sraa[0]',
    'configuration' => [
        'gateway' => [],
        'raa' => [],
        'sraa' => [
            9
        ],
        'email_templates' => [],
    ]
];
